test/cases/compile_errors/zon/struct.zon
.{
    .boolean = true,
    .number = 123,
}
